# Job-Portal

./: .dockerignore  .env.example  .gitignore  COMPANY_REGISTRATION_CHANGES.md  DEPLOYMENT_GUIDE.md  DEV_GUIDE.md  DOCKER_SETUP_UPDATE.md  IMPLEMENTATION_SUMMARY.md  N8N_WEBHOOK_IMPLEMENTATION.md  NOTIFICATION_FIX_SUMMARY.md  PR_RESPONSE_TEMPLATE.md  QUICK_START_TESTING.md  README.md  ROUTING_GUIDE.md  SETUP_COMPLETE.md  SIGNUP_AUTHENTICATION_IMPLEMENTATION.md  VALIDATION_DOCUMENTATION.md  check-backend.sh  deploy-frontend.sh  docker-compose.yml  package.json  restart-frontend.sh  start-frontend.sh  stop-old-frontend.sh
backend/: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile.dev  README.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/app/: __init__.py  config.py  constants.py  database.py  main.py  type_definitions.py  types.py
backend/app/ai/: __init__.py  embeddings.py  indexers.py
backend/app/ai/chat/: __init__.py  cache.py  chain.py  constants.py  instrumentation.py  orchestrator.py  sessions.py  summarizer.py  utils.py
backend/app/api/routes/: __init__.py  applications.py  chat.py  employer_profiles.py  health.py  interviews.py  job_seeker_profiles.py  jobs.py  recommendations.py  resumes.py  saved_jobs.py  users.py
backend/app/auth/: __init__.py  auth_utils.py  dependencies.py  routes.py  schemas.py  supabase_client.py  user_service.py  utils.py
backend/app/crud/: application.py  employer_profile.py  interview.py  job.py  job_seeker_profile.py  recommendation.py  resume.py  saved_job.py  user.py
backend/app/models/: __init__.py  job.py  user.py
backend/app/schemas/: __init__.py  application.py  employer.py  interview.py  job.py  job_seeker.py  recommendation.py  resume.py  saved_job.py  stats.py  user.py
backend/app/scripts/: __init__.py  ingest_embeddings.py
backend/app/services/: __init__.py  chat_history.py  webhook_service.py
backend/app/tasks/: embedding_tasks.py
backend/app/utils/: datetime_utils.py  dropbox_utils.py
backend/docs/: chat_agent_plan.md  chat_websocket_guide.md  todo_chat_roadmap.md
backend/tests/: SETUP_NEW_TEST_USERS.md  __init__.py  conftest.py  constants.py  setup_test_users.py  supabase_test_utils.py  test_analytics_workflow.py  test_application_workflow.py  test_chat_cache_eviction.py  test_chat_embedding_cache.py  test_chat_match_utils.py  test_chat_scoring.py  test_chat_session_store.py  test_chat_websocket.py  test_embedding_triggers.py  test_jwt_verification.py  test_resumes_api.py  test_saved_jobs_api.py  test_users_me_rbac.py
backend/tests/auth/: test_applications_rbac.py  test_cross_resource_authorization.py  test_employer_profiles_rbac.py  test_interviews_rbac.py  test_job_seeker_profiles_rbac.py  test_jobs_rbac.py  test_resumes_rbac.py  test_saved_jobs_rbac.py  test_session_management.py  test_token_security.py  test_users_rbac.py
backend/tests/endpoints/: test_health.py
backend/tests/fixtures/: __init__.py  test_users.py
backend/tests/integration/: __init__.py  test_e2e_workflows.py
(+145 files in other folders)
