# Job Portal Backend Configuration

[project]
name = "job-portal-backend"
version = "0.1.0"
requires-python = ">=3.11"

[tool.mypy]
# Python version
python_version = "3.12"

# Package resolution
explicit_package_bases = false

# Strict mode
strict = true

# Additional warnings
warn_return_any = true
warn_unused_configs = true

# Require type annotations
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Strict checking
check_untyped_defs = true
disallow_untyped_calls = false  # Too strict for FastAPI/Motor
disallow_any_generics = false  # Too strict for Motor
warn_redundant_casts = true
warn_unused_ignores = false  # Allow defensive type: ignore comments
no_implicit_reexport = true
strict_equality = true

# Error output
show_error_codes = true
show_column_numbers = true
pretty = true

# Exclude paths
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
]

# Per-module options for third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "bson.*",
    "motor.*",
    "chromadb.*",
    "redis.*",
    "dropbox.*",
    "supabase.*",
    "fastapi.*",
    "pymongo.*",
    "pytest_asyncio.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests that require external services (Redis, ChromaDB, etc.)",
]
